apps/bitwarden/manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-server-loadbalancer
  namespace: bitwarden
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bitwarden-service
