apps/bitwarden/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-service
  namespace: bitwarden
spec:
  type: ClusterIP
  selector:
    app: bitwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
